0.2.3224 - fov shift fix attempt

--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
   top: 0;
   left: 0;
   z-index: -1;
+  @supports (-webkit-appearance:none) {
+    .os-android & {
+      min-height: calc(100vh - 56px);
+    }
+  }
 }
 
 main {
